clusters/pk3s/vaultwarden/ingressroute-https.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vaultwarden-https
  namespace: vaultwarden
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`vault.watchtoken.org`)
      services:
        - name: vaultwarden
          port: 80
  tls: {}
