clusters/pk3s/vaultwarden/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vaultwarden
  namespace: vaultwarden
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`vault.watchtoken.org`)
      services:
        - name: vaultwarden
          port: 8080
    - kind: Rule
      match: Host(`vault.local`)
      services:
        - name: vaultwarden
          port: 8080
